test-cases/negative/basic_004_missing_is.lay
# negative test case: missing 'is' keyword in assignment
# expected error: Expected 'is' or 'equals' for assignment
# description: Tests that assignment requires 'is' or 'equals'

the variable x of type Number 5


